--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -3,15 +3,20 @@
     src: url('./../assets/font/Pony.ttf');
 }
 
-.bookingMovie{
+
+.bookingMovie {
     font-family: 'fontGame';
     background-image: url('./../../public/bgmovie.jpg');
-    @apply text-center h-screen p-10;
+    background-size: cover;
+    @apply text-center p-10;
+    height: 100%;
+    width: 100%;
 }
 
 
-.ghe{
+.ghe {
     border: 3px solid orange;
+    background-color: #fff;
     width: 45px;
     height: 35px;
     font-size: 12px;
@@ -20,34 +25,36 @@
     border-radius: 5px;
 }
 
-.rowNumber{
+.rowNumber {
     /* font-size: 25px; */
     width: 45px;
     height: 35px;
     background: none;
-    border:none;
+    border: none;
     margin-left: 2%;
     margin-bottom: 1%;
     font-size: 30px;
     color: yellow;
-    
+
 }
-.firstChar{
+
+.firstChar {
     color: yellow;
     font-size: 35px;
     margin-right: 15px;
 
 }
 
-.screen{
+.screen {
     border-bottom: 50px solid rgb(255, 159, 95);
     border-left: 50px solid transparent;
     border-right: 50px solid transparent;
     height: 100;
-    width:80%;
+    width: 80%;
     filter: drop-shadow(4px 30px 20px rgba(255, 255, 255, 0.5));
     font-size: 25px;
     color: #fff;
+    margin: auto;
 }
 
 
